--- a/packages/pm2-backend/package.json
+++ b/packages/pm2-backend/package.json
@@ -21,12 +21,20 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-addons/in-memory-db": "^1.8.10",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/schedule": "^0.3.1",
+    "@nestjs/typeorm": "^7.0.0",
+    "moment": "^2.25.3",
+    "nestjs-admin": "^0.4.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "schedule": "^0.5.0",
+    "sqlite3": "^4.2.0",
+    "typeorm": "^0.2.24"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
