--- a/packages/pm2-api/package.json
+++ b/packages/pm2-api/package.json
@@ -4,7 +4,8 @@
   "description": "Simple HTTP sever which provides pm2 processes informations",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node index.js"
   },
   "author": "Jan Kaderabek",
   "license": "ISC",
