--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,4 +20,4 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: cd apps/backend | npm ci | npm run lint
+    - run: sleep 60 | cd apps/backend | npm ci | npm run lint
