--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -7,6 +7,9 @@ on: [push]
 
 jobs:
   build:
+    defaults:
+      run:
+        working-directory: apps/backend
 
     runs-on: self-hosted
 
@@ -20,4 +23,4 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: sleep 60 | cd apps/backend | npm ci | npm run lint
+    - run: pwd | npm ci | npm run lint
